# Project_Calculate

./: .clang-format  CMakeLists.txt  Doxyfile  functions.cpp  main.cpp  test.cpp
docs/html/: annotated.html  annotated_dup.js  class_application-members.html  class_application.html  class_application.js  class_application__coll__graph.dot  class_event-members.html  class_event.html  class_event.js  class_history-members.html  class_history.html  class_history.js  class_time-members.html  class_time.html  class_time.js  classes.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp.js  main_8cpp__incl.dot  main_8cpp_source.html  navtreedata.js  navtreeindex0.js
docs/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  functions_0.js  functions_2.js  functions_4.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  variables_7.js
